<resources>
    <string name="app_name">ScheduSend</string>
    <string name="set_button">Set</string>
    <string name="year_hint">Year</string>
    <string name="month_hint">Month</string>
    <string name="day_hint">Day</string>
    <string name="time_hint">Hr:Min (Ex: 22:34, 08:12)</string>
    <string name="message_hint">Message</string>
    <string name="alphabet">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="time_input">1234567890:</string>
    <string name="contact_hint">Contact</string>
    <string name="reset">Reschedule</string>
    <string name="schedule">Schedule!</string>
    <string name="doze">Device WILL be used 30 min prior to message being sent</string>
</resources>
