<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="152dp"
        android:layout_marginRight="152dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/year_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editMonth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="152dp"
        android:ems="10"
        android:hint="@string/month_hint"
        android:inputType="text"
        android:digits="@string/alphabet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editYear" />

    <EditText
        android:id="@+id/editDay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="152dp"
        android:ems="10"
        android:hint="@string/day_hint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMonth" />

    <EditText
        android:id="@+id/editTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="152dp"
        android:digits="@string/time_input"
        android:ems="10"
        android:hint="@string/time_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDay" />

    <EditText
        android:id="@+id/editMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="84dp"
        android:ems="10"
        android:hint="@string/message_hint"
        android:inputType="textShortMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDay" />

    <Button
    android:id="@+id/setYear"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="40dp"
    android:layout_marginLeft="40dp"
    android:layout_marginTop="52dp"
    android:onClick="setYear"
    android:text="@string/set_button"
    app:layout_constraintStart_toEndOf="@+id/editYear"
    app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/setMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="148dp"
        android:onClick="setMonth"
        android:text="@string/set_button"
        app:layout_constraintStart_toEndOf="@+id/editMonth"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/setDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="248dp"
        android:onClick="setDay"
        android:text="@string/set_button"
        app:layout_constraintStart_toEndOf="@+id/editDay"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/setTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="352dp"
        android:onClick="setTime"
        android:text="@string/set_button"
        app:layout_constraintStart_toEndOf="@+id/editTime"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:text="@string/reset"
        android:onClick="reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setTime" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="30dp"
        android:text="@string/schedule"
        android:onClick="callToSchedule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTime" />


</android.support.constraint.ConstraintLayout>