<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimedMessage">

    <EditText
        android:id="@+id/in_date"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/in_date"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@+id/in_date"
        android:layout_toRightOf="@+id/in_date"
        android:text="SELECT DATE"
        android:onClick="onDateSelectClick"
        app:layout_constraintStart_toEndOf="@+id/in_date"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/in_time"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/in_date"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in_date" />

    <Button
        android:id="@+id/btn_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_date"
        android:layout_alignStart="@+id/btn_date"
        android:layout_alignLeft="@+id/btn_date"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="SELECT TIME"
        android:onClick="onTimeSelectCLick"
        app:layout_constraintStart_toEndOf="@+id/in_time"
        app:layout_constraintTop_toBottomOf="@+id/btn_date" />

    <EditText
        android:id="@+id/editYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="156dp"
        android:ems="10"
        android:hint="@string/year_hint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editDay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="152dp"
        android:ems="10"
        android:hint="@string/day_hint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoMonth" />

    <EditText
        android:id="@+id/editTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="152dp"
        android:digits="@string/time_input"
        android:ems="10"
        android:hint="@string/time_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDay" />

    <EditText
        android:id="@+id/editMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="84dp"
        android:ems="10"
        android:hint="@string/message_hint"
        android:inputType="textShortMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDay" />

    <Button
        android:id="@+id/yearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="116dp"
        android:onClick="setYear"
        android:text="@string/set_button"
        app:layout_constraintStart_toEndOf="@+id/editYear"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/monthButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="40dp"
        android:onClick="setMonth"
        android:text="@string/set_button"
        app:layout_constraintStart_toEndOf="@+id/autoMonth"
        app:layout_constraintTop_toBottomOf="@+id/yearButton" />

    <Button
        android:id="@+id/dayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:onClick="setDay"
        android:text="@string/set_button"
        app:layout_constraintStart_toEndOf="@+id/editDay"
        app:layout_constraintTop_toBottomOf="@+id/monthButton" />

    <Button
        android:id="@+id/timeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="64dp"
        android:onClick="setTime"
        android:text="@string/set_button"
        app:layout_constraintStart_toEndOf="@+id/editTime"
        app:layout_constraintTop_toBottomOf="@+id/dayButton" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:onClick="reset"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactButton" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="136dp"
        android:onClick="callToSchedule"
        android:text="@string/schedule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTime" />

    <Button
        android:id="@+id/contactButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="50dp"
        android:onClick="setContact"
        android:text="@string/set_button"
        app:layout_constraintStart_toEndOf="@+id/autoContact"
        app:layout_constraintTop_toBottomOf="@+id/timeButton" />

    <AutoCompleteTextView
        android:id="@+id/autoContact"
        android:layout_width="213dp"
        android:layout_height="46dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="48dp"
        android:hint="@string/contact_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTime" />

    <AutoCompleteTextView
        android:id="@+id/autoMonth"
        android:layout_width="213dp"
        android:layout_height="46dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="55dp"
        android:hint="@string/month_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editYear" />


</androidx.constraintlayout.widget.ConstraintLayout>